--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,60 @@
+/* cookie modal */
+@keyframes slide-in-top{0%{transform:translateY(-1000px);opacity:0}100%{transform:translateY(0);opacity:1}}
+
+#cookie-container{
+    background-color: rgba(0, 0, 0, 0.801);
+    position: absolute;
+    width: 100%;
+    height: 100vh;  
+}
+
+#cookiePolicy{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color: black;
+    color: white;
+    width: 50vw;
+    height: 30vh;
+    position: absolute;
+    top: 10%;
+    left: 25%;
+    animation:slide-in-top 1s cubic-bezier(.25,.46,.45,.94) both
+}
+
+#cookieAll{
+    background-color: lightskyblue;
+    border: none;
+    color: white;
+}
+
+#cookieAll:hover{
+    background-color: rgb(28, 157, 238);
+}
+
+#cookiechosen:hover{
+    background-color: rgb(1, 24, 39);
+}
+#cookiechosen{
+    background-color: rgb(4, 52, 82);
+    border: none;
+    color: white;
+}
+
+body{
+    margin: 0;
+    height: 3000px;
+}
+
+
+.noShow{
+    height: 100vh;
+    overflow-y: hidden;
+    padding-right: 15px; /* Avoid width reflow */
+}
+
+
+
 /* form */
 
 @keyframes shake-horizontal {
@@ -60,7 +117,7 @@ input{
     border-radius: 8px;
 }
 
-button{
+#submitButton{
     border-radius: 8px;
     width: 25vw;
     margin: auto;
